latest/web-version-source-code/WebVersionGenerator/SquirrelLanguageTranspiler/SquirrelParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.3
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from ./web-version-source-code/SquirrelLanguageGrammar/Squirrel.g4 by ANTLR 4.9.3

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.3")]
[System.CLSCompliant(false)]
public partial class SquirrelParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, LeftBrace=57, RightBrace=58, If=59, 
		Else=60, While=61, Id=62, Number=63, Str=64, WS=65, MultiLineComment=66, 
		SingleLineComment=67;
	public const int
		RULE_id = 0, RULE_boolean = 1, RULE_whileKeyword = 2, RULE_str = 3, RULE_derefexp = 4, 
		RULE_stats = 5, RULE_statincludingemptystatement = 6, RULE_functionDeclaration = 7, 
		RULE_functionParameter = 8, RULE_stat = 9, RULE_breakStatement = 10, RULE_switchCaseStatement = 11, 
		RULE_statNotIncludingObjectLiteral = 12, RULE_arrayLiteral = 13, RULE_initz = 14, 
		RULE_negativeSign = 15, RULE_incrementOperator = 16, RULE_decrementOperator = 17, 
		RULE_equalequal = 18, RULE_notequal = 19, RULE_arrayIndexing = 20, RULE_openParen = 21, 
		RULE_closeParen = 22, RULE_objectLiteral = 23, RULE_propertyAssignment = 24, 
		RULE_exp = 25, RULE_openSquareBracket = 26, RULE_typeOf = 27, RULE_ternaryOperator = 28, 
		RULE_classStatements = 29, RULE_classVariableDeclaration = 30, RULE_classConstructorDeclaration = 31, 
		RULE_classConstructorArgs = 32, RULE_classConstructorArg = 33, RULE_classFunctionDeclaration = 34, 
		RULE_expNotIncludingObjectLiteral = 35, RULE_assignmentModificationOperator = 36, 
		RULE_arguments = 37, RULE_argument = 38;
	public static readonly string[] ruleNames = {
		"id", "boolean", "whileKeyword", "str", "derefexp", "stats", "statincludingemptystatement", 
		"functionDeclaration", "functionParameter", "stat", "breakStatement", 
		"switchCaseStatement", "statNotIncludingObjectLiteral", "arrayLiteral", 
		"initz", "negativeSign", "incrementOperator", "decrementOperator", "equalequal", 
		"notequal", "arrayIndexing", "openParen", "closeParen", "objectLiteral", 
		"propertyAssignment", "exp", "openSquareBracket", "typeOf", "ternaryOperator", 
		"classStatements", "classVariableDeclaration", "classConstructorDeclaration", 
		"classConstructorArgs", "classConstructorArg", "classFunctionDeclaration", 
		"expNotIncludingObjectLiteral", "assignmentModificationOperator", "arguments", 
		"argument"
	};

	private static readonly string[] _LiteralNames = {
		null, "'::'", "'true'", "'false'", "'.'", "'['", "']'", "';'", "'\n'", 
		"'function'", "'('", "')'", "','", "'='", "'break'", "'case'", "':'", 
		"'default'", "'local'", "'const'", "'switch'", "'return'", "'for'", "'foreach'", 
		"'in'", "'-'", "'++'", "'--'", "'=='", "'!='", "'typeof'", "'?'", "'constructor'", 
		"'!'", "'class'", "'extends'", "'base'", "'*'", "'/'", "'%'", "'+'", "'>>'", 
		"'<<'", "'<=>'", "'<='", "'>='", "'<'", "'>'", "'&&'", "'&'", "'||'", 
		"'|'", "'<-'", "'+='", "'-='", "'*='", "'/='", "'{'", "'}'", "'if'", "'else'", 
		"'while'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, "LeftBrace", "RightBrace", 
		"If", "Else", "While", "Id", "Number", "Str", "WS", "MultiLineComment", 
		"SingleLineComment"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Squirrel.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static SquirrelParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public SquirrelParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public SquirrelParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class IdContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Id() { return GetToken(SquirrelParser.Id, 0); }
		public IdContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_id; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISquirrelListener typedListener = listener as ISquirrelListener;
			if (typedListener != null) typedListener.EnterId(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISquirrelListener typedListener = listener as ISquirrelListener;
			if (typedListener != null) typedListener.ExitId(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISquirrelVisitor<TResult> typedVisitor = visitor as ISquirrelVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitId(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IdContext id() {
		IdContext _localctx = new IdContext(Context, State);
		EnterRule(_localctx, 0, RULE_id);
		try {
			State = 81;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case Id:
				EnterOuterAlt(_localctx, 1);
				{
				State = 78;
				Match(Id);
				}
				break;
			case T__0:
				EnterOuterAlt(_localctx, 2);
				{
				State = 79;
				Match(T__0);
				State = 80;
				Match(Id);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BooleanContext : ParserRuleContext {
		public BooleanContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_boolean; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISquirrelListener typedListener = listener as ISquirrelListener;
			if (typedListener != null) typedListener.EnterBoolean(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISquirrelListener typedListener = listener as ISquirrelListener;
			if (typedListener != null) typedListener.ExitBoolean(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISquirrelVisitor<TResult> typedVisitor = visitor as ISquirrelVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBoolean(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BooleanContext boolean() {
		BooleanContext _localctx = new BooleanContext(Context, State);
		EnterRule(_localctx, 2, RULE_boolean);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 83;
			_la = TokenStream.LA(1);
			if ( !(_la==T__1 || _la==T__2) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class WhileKeywordContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode While() { return GetToken(SquirrelParser.While, 0); }
		public WhileKeywordContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_whileKeyword; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISquirrelListener typedListener = listener as ISquirrelListener;
			if (typedListener != null) typedListener.EnterWhileKeyword(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISquirrelListener typedListener = listener as ISquirrelListener;
			if (typedListener != null) typedListener.ExitWhileKeyword(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISquirrelVisitor<TResult> typedVisitor = visitor as ISquirrelVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWhileKeyword(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public WhileKeywordContext whileKeyword() {
		WhileKeywordContext _localctx = new WhileKeywordContext(Context, State);
		EnterRule(_localctx, 4, RULE_whileKeyword);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 85;
			Match(While);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StrContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Str() { return GetToken(SquirrelParser.Str, 0); }
		public StrContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_str; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISquirrelListener typedListener = listener as ISquirrelListener;
			if (typedListener != null) typedListener.EnterStr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISquirrelListener typedListener = listener as ISquirrelListener;
			if (typedListener != null) typedListener.ExitStr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISquirrelVisitor<TResult> typedVisitor = visitor as ISquirrelVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StrContext str() {
		StrContext _localctx = new StrContext(Context, State);
		EnterRule(_localctx, 6, RULE_str);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 87;
			Match(Str);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DerefexpContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdContext[] id() {
			return GetRuleContexts<IdContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public IdContext id(int i) {
			return GetRuleContext<IdContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpContext exp() {
			return GetRuleContext<ExpContext>(0);
		}
		public DerefexpContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_derefexp; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISquirrelListener typedListener = listener as ISquirrelListener;
			if (typedListener != null) typedListener.EnterDerefexp(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISquirrelListener typedListener = listener as ISquirrelListener;
			if (typedListener != null) typedListener.ExitDerefexp(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISquirrelVisitor<TResult> typedVisitor = visitor as ISquirrelVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDerefexp(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DerefexpContext derefexp() {
		DerefexpContext _localctx = new DerefexpContext(Context, State);
		EnterRule(_localctx, 8, RULE_derefexp);
		try {
			State = 99;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 89;
				id();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 90;
				id();
				State = 91;
				Match(T__3);
				State = 92;
				id();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 94;
				id();
				State = 95;
				Match(T__4);
				State = 96;
				exp();
				State = 97;
				Match(T__5);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StatincludingemptystatementContext[] statincludingemptystatement() {
			return GetRuleContexts<StatincludingemptystatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatincludingemptystatementContext statincludingemptystatement(int i) {
			return GetRuleContext<StatincludingemptystatementContext>(i);
		}
		public StatsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stats; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISquirrelListener typedListener = listener as ISquirrelListener;
			if (typedListener != null) typedListener.EnterStats(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISquirrelListener typedListener = listener as ISquirrelListener;
			if (typedListener != null) typedListener.ExitStats(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISquirrelVisitor<TResult> typedVisitor = visitor as ISquirrelVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStats(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatsContext stats() {
		StatsContext _localctx = new StatsContext(Context, State);
		EnterRule(_localctx, 10, RULE_stats);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 101;
			statincludingemptystatement();
			State = 106;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__6 || _la==T__7) {
				{
				{
				State = 102;
				_la = TokenStream.LA(1);
				if ( !(_la==T__6 || _la==T__7) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 103;
				statincludingemptystatement();
				}
				}
				State = 108;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatincludingemptystatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StatContext stat() {
			return GetRuleContext<StatContext>(0);
		}
		public StatincludingemptystatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statincludingemptystatement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISquirrelListener typedListener = listener as ISquirrelListener;
			if (typedListener != null) typedListener.EnterStatincludingemptystatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISquirrelListener typedListener = listener as ISquirrelListener;
			if (typedListener != null) typedListener.ExitStatincludingemptystatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISquirrelVisitor<TResult> typedVisitor = visitor as ISquirrelVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatincludingemptystatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatincludingemptystatementContext statincludingemptystatement() {
		StatincludingemptystatementContext _localctx = new StatincludingemptystatementContext(Context, State);
		EnterRule(_localctx, 12, RULE_statincludingemptystatement);
		try {
			State = 113;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 109;
				stat();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 110;
				Match(T__6);
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 111;
				Match(T__7);
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionDeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LeftBrace() { return GetToken(SquirrelParser.LeftBrace, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StatsContext stats() {
			return GetRuleContext<StatsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RightBrace() { return GetToken(SquirrelParser.RightBrace, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public FunctionParameterContext[] functionParameter() {
			return GetRuleContexts<FunctionParameterContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FunctionParameterContext functionParameter(int i) {
			return GetRuleContext<FunctionParameterContext>(i);
		}
		public FunctionDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISquirrelListener typedListener = listener as ISquirrelListener;
			if (typedListener != null) typedListener.EnterFunctionDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISquirrelListener typedListener = listener as ISquirrelListener;
			if (typedListener != null) typedListener.ExitFunctionDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISquirrelVisitor<TResult> typedVisitor = visitor as ISquirrelVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionDeclarationContext functionDeclaration() {
		FunctionDeclarationContext _localctx = new FunctionDeclarationContext(Context, State);
		EnterRule(_localctx, 14, RULE_functionDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 115;
			Match(T__8);
			State = 116;
			Match(T__9);
			State = 120;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__11) | (1L << Id))) != 0)) {
				{
				{
				State = 117;
				functionParameter();
				}
				}
				State = 122;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 123;
			Match(T__10);
			State = 125;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__7) {
				{
				State = 124;
				Match(T__7);
				}
			}

			State = 127;
			Match(LeftBrace);
			State = 128;
			stats();
			State = 129;
			Match(RightBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionParameterContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdContext id() {
			return GetRuleContext<IdContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpContext exp() {
			return GetRuleContext<ExpContext>(0);
		}
		public FunctionParameterContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionParameter; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISquirrelListener typedListener = listener as ISquirrelListener;
			if (typedListener != null) typedListener.EnterFunctionParameter(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISquirrelListener typedListener = listener as ISquirrelListener;
			if (typedListener != null) typedListener.ExitFunctionParameter(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISquirrelVisitor<TResult> typedVisitor = visitor as ISquirrelVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionParameter(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionParameterContext functionParameter() {
		FunctionParameterContext _localctx = new FunctionParameterContext(Context, State);
		EnterRule(_localctx, 16, RULE_functionParameter);
		int _la;
		try {
			State = 147;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,10,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 132;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__11) {
					{
					State = 131;
					Match(T__11);
					}
				}

				State = 134;
				id();
				State = 136;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
				case 1:
					{
					State = 135;
					Match(T__11);
					}
					break;
				}
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 139;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__11) {
					{
					State = 138;
					Match(T__11);
					}
				}

				State = 141;
				id();
				State = 142;
				Match(T__12);
				State = 143;
				exp();
				State = 145;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,9,Context) ) {
				case 1:
					{
					State = 144;
					Match(T__11);
					}
					break;
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StatNotIncludingObjectLiteralContext statNotIncludingObjectLiteral() {
			return GetRuleContext<StatNotIncludingObjectLiteralContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ObjectLiteralContext objectLiteral() {
